[package]
name = "renet_showcase"
version = "0.1.0"
edition = "2021"
default-run = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.9.1"
bincode = "1.3.3"
local-ip-address = "0.5.0"
serde = "1.0.152"

# For port forwarded servers
public-ip = "0.2.2"
tokio = "1.24.1"
bevy_renet = "0.0.6"

